@@ -1,5 +1,9 @@
 2005-12-05 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/script.cpp: Doc-comment improvements.
+
+2005-12-05 Braden McDaniel  <braden@endoframe.com>
+
 	* src/libopenvrml/openvrml/node.cpp: Doc-comment improvements.
 
 2005-12-05 Braden McDaniel  <braden@endoframe.com>
